--- a/livechat-volkswagen/index.html
+++ b/livechat-volkswagen/index.html
@@ -29,10 +29,6 @@
                     <li><i class="fa-solid fa-video"></i></li><br>
                 </ul>
 
-
-
-
-
                 <div style="height:150px">
 
                 </div>
@@ -48,7 +44,7 @@
                     <hr>
                     <div class="user-video-title">
                     <div>
-                    <h5 style="font-family:Lato;margin: 15px auto;"><i class="fa-solid fa-user-group"></i> &nbsp; invited to the call &nbsp; <span style="background-color:darkslategray;padding:7px 10px;color:white;border-radius: 8px;">6</span></h5>
+                    <h5 style="font-family:Lato;margin: 15px auto;"><i class="fa-solid fa-user-group"></i> &nbsp; invited to call &nbsp; <span style="background-color:darkslategray;padding:7px 10px;color:white;border-radius: 8px;">6</span></h5>
                     </div>
                     <div></div>
                     <div>
