--- a/template_1/index.html
+++ b/template_1/index.html
@@ -106,7 +106,7 @@
         </div>
       </div>
       <div style="width:1350px;height:400px;max-width: 100%;">
-        <!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img class="d-block w-100" src="assets/auto-01.jpg.png" alt="First slide">
@@ -127,7 +127,7 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="sr-only">Next</span>
             </a>
-        </div> -->
+        </div>
 
       </div>
 
