--- a/template_1/index.html
+++ b/template_1/index.html
@@ -135,7 +135,7 @@
       <div class="section_three">
         <div class="section_three-box" style="filter: drop-shadow(0px 0px 4px rgb(153, 141, 141));">
           <div class="card" style="width: 18rem;">
-            <img src="assets/img1.jpgg" class="card-img-top" alt="...">
+            <img src="assets/img1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text"><strong>quick example on the.<i class="fas fa-arrow-circle-right"
                     style="margin-left:66px;"></i></strong></p>
@@ -144,7 +144,7 @@
         </div>
         <div class="section_three-box" style="filter: drop-shadow(0px 0px 4px rgb(153, 141, 141));">
           <div class="card" style="width: 18rem;">
-            <img src="assets/img3.jpgg" class="card-img-top" alt="...">
+            <img src="assets/img3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text"><strong>quick example on the.<i class="fas fa-arrow-circle-right"
                     style="margin-left:66px;"></i></strong></p>
@@ -153,7 +153,7 @@
         </div>
         <div class="section_three-box" style="filter: drop-shadow(0px 0px 4px rgb(153, 141, 141));">
           <div class="card" style="width: 18rem;">
-            <img src="assets/img1.jpgg" class="card-img-top" alt="...">
+            <img src="assets/img1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text"><strong>quick example on the.<i class="fas fa-arrow-circle-right"
                     style="margin-left:66px;"></i></strong></p>
