--- a/template_1/index.html
+++ b/template_1/index.html
@@ -182,7 +182,7 @@
             quos a quibusdam blanditiis soluta beatae? Nulla maiores deleniti magnam labore doloremque,
             modi iure sunt? Placeat neceeeeeeessitatibus iure temporibus aliquam quidem dolore ea neque, asperiores
             quos a quibusdam blanditiis soluta beatae? Nulla maiores deleniti magnam labore doloremque,
-            modi iure sunt? Placeat neceeeeeeessitatibus iure temporibus aliquam quidem dolore ea neque, asperiores
+            
           </p>
         </div>
 
@@ -382,14 +382,14 @@
             </div>
           </div>
           <div class="item">
-            <div class="card" style="">
+            <div class="card">
               <img class="card-img-top" src="./assets/mechanic-02.jpg" alt="Card image cap">
               <div class="card-body" style="text-align: center;color:black">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                   card's content.</p>
                 <div class="worker-social-links">
-                  <ul style="">
+                  <ul>
                     <li><i class="fab fa-facebook-square"></i></li>
                     &nbsp;&nbsp;
                     <li><i class="fab fa-whatsapp-square"></i></li>
@@ -433,7 +433,7 @@
           <div class="item">
             <img class="card-img-top mx-auto" style="width:80px;height:80px" src="./assets/client-01.png"
               alt="Card image cap">
-            <div class="card" style="">
+            <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <img src="./assets/five-stars.png" alt="five-stars" srcset="">
@@ -448,7 +448,7 @@
           <div class="item">
             <img class="card-img-top mx-auto" style="width:80px;height:80px" src="./assets/client-01.png"
               alt="Card image cap">
-            <div class="card" style="">
+            <div class="card">
 
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
