--- a/BitcodePrime/index.html
+++ b/BitcodePrime/index.html
@@ -120,7 +120,7 @@
                         needd to do is follow the steps and you'll be ready to trade in no time.</p>
                 </div>
                 <div class="container my-5">
-                    <div class="row justify-content-center gap-5">
+                    <div class="row justify-content-center gap-5 px-2 px-lg-0">
                         <div class="col-lg-3 bg-white text-center rounded-3">
                             <div class="bg-dark" style="width:75px;height: 70px; display: inline-block;padding-top:18px; margin-top:-27px;"><i class="fa-solid fa-address-card text-white text-center" style="font-size:32px !important;"></i></div>
                             <h3 class="pt-3">Register Your Account</h3>
