bitcode prime updated

--- a/BitcodePrime/index.html
+++ b/BitcodePrime/index.html
@@ -82,8 +82,8 @@
                     <p class="text-white text-center">Act now and become one of the thousands of profitable investors...</p>
                 </div>
                 <div class="container mt-5">
-                    <div class="row gap-3 gap-lg-0">
-                        <div class="col-lg-5 pt-0 px-2 px-lg-4">
+                    <div class="row gap-3 gap-lg-0 align-items-stretch">
+                        <div class="col-lg-5 pt-0 px-2 px-lg-4 d-flex">
                             <form class="bg-white p-5 rounded-3 px-4" action="">
                                 <lable>Name:</lable>
                                 <input type="text" class="form-control">
