bitcode prime updated

--- a/BitcodePrime/index.html
+++ b/BitcodePrime/index.html
@@ -32,7 +32,7 @@
             <div class="col-lg-4 col-md-4 col-sm-6 col-12">
                 <div class="d-grid d-lg-block d-md-block d-sm-block text-center">
                     <button class="btn btn-lg border-0 mx-1" type="button" style="background-color: white;box-shadow:0px 0px 6px rgb(179, 176, 176,0.7);">Login</button>
-                    <button class="btn btn-lg border-0 text-white mt-md-0 mt-lg-0 mt-sm-0 mt-2" type="button" style="background: #ffab00;">Register</button>
+                    <a href="#registerationForm" class="btn btn-lg border-0 text-white mt-md-0 mt-lg-0 mt-sm-0 mt-2" type="button" style="background: #ffab00;text-decoration: none;">Register</a>
                 </div>
             </div>
             <!-- <div class="col-lg-1" style="align-items: center;">
@@ -84,7 +84,7 @@
                 <div class="container mt-5">
                     <div class="row gap-3 gap-lg-0 align-items-stretch">
                         <div class="col-lg-5 pt-0 px-2 px-lg-4 d-flex">
-                            <form class="bg-white p-5 rounded-3 px-4" action="">
+                            <form class="bg-white p-5 rounded-3 px-4" action="" id="registerationForm">
                                 <lable>Name:</lable>
                                 <input type="text" class="form-control">
                                 <lable>Surname:</lable>
@@ -146,7 +146,7 @@
                     </div>
                 </div>
                 <div class="text-center pt-3">
-                    <button class="btn-lg rounded text-white border-0  px-5" style="background: #ffab00;">Register</button>
+                    <a href="#registerationForm" class="btn-lg rounded text-white border-0 px-5" style="background: #ffab00;text-decoration: none;">Register</a>
                 </div>
             </div>
         </section>
@@ -162,8 +162,8 @@
                         were few options for people who didn't have any work experience. This couldn't keep going, so
                         Bitcode Prime was born. It enables you to make trades while the algorithm in the software does
                         the work for you.</p>
-                    <button class="btn-lg rounded border-0 text-white" style="background: #ffab00;"> Register for
-                        free</button>
+                    <a class="btn-lg rounded border-0 text-white" style="background: #ffab00;text-decoration: none;"> Register for
+                        free</a>
                 </div>
             </div>
             <div class="text-center pt-5">
@@ -259,8 +259,8 @@
                 </div>
             </div>
             <div class="text-center pb-5">
-                <button class="btn-lg rounded text-white border-0" style="background: #ffab00;">Register for
-                    Free</button>
+                <a href="#registerationForm" class="btn-lg rounded text-white border-0" style="background: #ffab00;text-decoration: none;">Register for
+                    Free</a>
             </div>
         </section>
         <section class="sect-four bg-dark pt-5 pb-5 ">
@@ -330,8 +330,8 @@
                             Bitcode Prime was born. It enables you to make trades while the algorithm in the software
                             does
                             the work for you.</p>
-                        <button class="btn-lg rounded border-0 text-white" style="background: #ffab00;"> Register for
-                            free</button>
+                        <a href="#registerationForm" class="btn-lg rounded border-0 text-white" style="background: #ffab00;text-decoration: none;"> Register for
+                            free</a>
                     </div>
                     <div class="col-lg-5">
                         <img src="./assets/pexels-worldspectrum-844124.jpg" alt="" width="100%">
@@ -439,8 +439,8 @@
                     </div>
                 </div>
                 <div class="text-center pt-5 pb-5">
-                    <button class="btn-lg rounded text-white border-0" style="background: #ffab00;">Register for
-                        Free</button>
+                    <a href="#registerationForm" class="btn-lg rounded text-white border-0" style="background: #ffab00;text-decoration: none;">Register for
+                        Free</a>
                 </div>
                 <div>
                     <h1>What is Bitcode Prime?</h1>
@@ -476,8 +476,8 @@
                         you’re up to date with any changes on the market.</p>
                 </div>
                 <div class="text-start pt-2 pb-5">
-                    <button class="btn-lg rounded text-white border-0" style="background: #ffab00;">Register for
-                        Free</button>
+                    <a href="#registerationForm" class="btn-lg rounded text-white border-0" style="background: #ffab00;text-decoration: none;">Register for
+                        Free</a>
                 </div>
             </div>
     </div>
