--- a/BitcodePrime/index.html
+++ b/BitcodePrime/index.html
@@ -571,6 +571,9 @@
     $('.stop').on('click', function() {
         owl.trigger('stop.owl.autoplay')
     })
+    
+     const button = document.querySelectorAll(".btn.text-white");
+    console.log(button);
     </script>
   
 </body>
