--- a/BitcodePrime/index.html
+++ b/BitcodePrime/index.html
@@ -31,7 +31,7 @@
             <div class="col-lg-4 col-xxl-6 col-md-4 col-sm-0"></div>
             <div class="col-lg-4 col-md-4 col-sm-6 col-12">
                 <div class="d-grid d-lg-block d-md-block d-sm-block text-center">
-                    <button class="btn btn-lg border-0 mx-1" type="button" style="background-color: white;box-shadow:0px 0px 6px rgb(179, 176, 176,0.7);">Login</button>
+                    <button class="btn btn-lg border-0 mx-1" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" style="background-color: white;box-shadow:0px 0px 6px rgb(179, 176, 176,0.7);">Login</button>
                     <a href="" class="btn btn-lg border-0 text-white mt-md-0 mt-lg-0 mt-sm-0 mt-2" type="button" style="background: #ffab00;text-decoration: none;">Register</a>
                 </div>
             </div>
@@ -510,6 +510,29 @@
     
     
     </div>
+    <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" >
+    Launch demo modal
+  </button>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
     <!-- Optional JavaScript; choose one of the two! -->
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -585,6 +608,7 @@
 
     }
     )
+
   </script>
   
 </body>
