--- a/BitcodePrime/index.html
+++ b/BitcodePrime/index.html
@@ -510,25 +510,24 @@
     
     
     </div>
-    <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" >
-    Launch demo modal
-  </button>
   
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Login</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          ...
+            <form action="">
+                <input class="form-control mb-3" type="text" name="" id="" placeholder="Email/Username">
+                <input class="form-control" type="text" name="" id="" placeholder="Password">
+            </form>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn" style="background: #ffab00;text-decoration: none;color:white">Login</button>
         </div>
       </div>
     </div>
