--- a/BitcodePrime/index.html
+++ b/BitcodePrime/index.html
@@ -150,8 +150,8 @@
                 </div>
             </div>
         </section>
-        <section class="sect-three pt-5">
-            <div class="row justify-content-center align-items-center gap-3" style="--bs-gutter-x:0px">
+        <section class="sect-three p-lg-0 p-md-0 pt-lg-5 pt-md-5 p-3">
+            <div class="row justify-content-center align-items-start gap-3" style="--bs-gutter-x:0px">
                 <div class="col-lg-4">
                     <img src="./assets/pexels-alesia-kozik-6777570.jpg" alt="" width="100%">
                 </div>
@@ -172,7 +172,7 @@
             </div>
             <div class="container pb-5" style="padding-top: 40px;">
                 <div class="row flex-row flex-wrap text-center justify-content-around" style="row-gap: 20px;">
-                    <div class="col col-lg-5 col-md-10">
+                    <div class="col-12 col-lg-5 col-md-10">
                         <div class="testimonials-item">
                             <div class="avatar">
                                 <div class="ci-avatar">VS</div>
@@ -193,7 +193,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col col-lg-5 col-md-10">
+                    <div class="col-12 col-lg-5 col-md-10">
                         <div class="testimonials-item">
                             <div class="avatar">
                                 <div class="ci-avatar">VS</div>
@@ -214,7 +214,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col col-lg-5 col-md-10">
+                    <div class="col-12 col-lg-5 col-md-10">
                         <div class="testimonials-item">
                             <div class="avatar">
                                 <div class="ci-avatar">VS</div>
@@ -235,7 +235,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col col-lg-5 col-md-10">
+                    <div class="col-12 col-lg-5 col-md-10">
                         <div class="testimonials-item">
                             <div class="avatar">
                                 <div class="ci-avatar">VS</div>
@@ -343,7 +343,7 @@
                         were few. This couldn't keep going, so
                         Bitcode Prime was born.</p>
                 </div>
-                <div class="row justify-content-center">
+                <div class="row justify-content-center gap-4 gap-lg-0">
                     <div class="col-lg-5">
                         <div class="accordion" id="accordionExample">
                             <div class="accordion-item">
