--- a/Newrich/index.html
+++ b/Newrich/index.html
@@ -124,7 +124,7 @@
                     <img
                       class="position-absolute"
                       src="./assets/email-icon.svg.svg"
-                      alt=""
+                      alt="email icon"
                       srcset=""
                     />
                     <input
@@ -158,7 +158,43 @@
         </div>
       </section>
     </header>
-    <main></main>
+    <main>
+      <section class="section-02">
+        <div class="container">
+          <div
+            class="d-flex flex-column flex-md-row flex-lg-row justify-content-between align-items-center"
+          >
+            <div
+              class="section-02-content d-flex flex-column align-items-center align-items-md-start align-items-lg-start"
+            >
+              <img src="./assets/elegro.png" alt="elegro" srcset="" />
+              <h2 class="text-center text-md-start text-lg-start">
+                Our Online Shop Supports Payments with Cryptocurrencies
+              </h2>
+              <p class="text-center text-md-start text-lg-start">
+                Pay for the goods with just one click! Elegro plugin makes it
+                superp cryptocurrencies!
+              </p>
+              <a class="d-md-block d-lg-block d-none" href="">View Now</a>
+            </div>
+            <div
+              class="d-flex flex-column align-items-center gap-5 section-02-img"
+            >
+              <img
+                src="./assets/section-02-img.png"
+                alt="cryptocurrencies"
+                srcset=""
+              />
+              <a class="d-md-none d-lg-none" href="">View Now</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-03">
+        <!-- Bar Chart -->
+      </section>
+      <section class="section-04"></section>
+    </main>
     <footer></footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
