--- a/Newrich/index.html
+++ b/Newrich/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
+    <title>Customer Service</title>
+    <meta
+      name="description"
+      content="Customer Service is The Face of Our Company"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -28,7 +32,6 @@
       <nav>
         <div class="navbar">
           <div class="logo"><a href="#">Logo</a></div>
-
           <i class="bx bx-menu"></i>
           <div class="nav-links">
             <div class="sidebar-logo">
@@ -193,7 +196,128 @@
       <section class="section-03">
         <!-- Bar Chart -->
       </section>
-      <section class="section-04"></section>
+      <section class="section-04">
+        <div class="container">
+          <div
+            class="d-flex justify-content-between flex-column flex-md-row flex-lg-row"
+          >
+            <div>
+              <img src="./assets/section-04-img.png" alt="" srcset="" />
+            </div>
+            <div class="section-04-content">
+              <h3 class="text-danger">[some faq’S]</h3>
+              <h2>A simple process.</h2>
+              <div>
+                <h3>
+                  Which is better: Owning the solar power system or having a
+                  power purchase agreement?
+                </h3>
+              </div>
+              <p>
+                There are many factors that can affect which option is the right
+                fit for you, including the size of your roof, the amount of
+                annual sun exposure, shading, roof condition, annual power
+                consumption, and your tax liability. Our expert ne which route
+                makes the most sense for you. In
+              </p>
+              <div>
+                <div
+                  class="accordion accordion-flush"
+                  id="accordionFlushExample"
+                >
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingOne">
+                      <button
+                        class="accordion-button collapsed"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseOne"
+                        aria-expanded="false"
+                        aria-controls="flush-collapseOne"
+                      >
+                        How do I get my solar tax credits?
+                      </button>
+                    </h2>
+                    <div
+                      id="flush-collapseOne"
+                      class="accordion-collapse collapse"
+                      aria-labelledby="flush-headingOne"
+                      data-bs-parent="#accordionFlushExample"
+                    >
+                      <div class="accordion-body">
+                        Placeholder content for this accordion, which is
+                        intended to demonstrate the
+                        <code>.accordion-flush</code> class. This is the first
+                        item's accordion body.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingTwo">
+                      <button
+                        class="accordion-button collapsed"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseTwo"
+                        aria-expanded="false"
+                        aria-controls="flush-collapseTwo"
+                      >
+                        I am moving soon, does it make sense for me to go solar?
+                      </button>
+                    </h2>
+                    <div
+                      id="flush-collapseTwo"
+                      class="accordion-collapse collapse"
+                      aria-labelledby="flush-headingTwo"
+                      data-bs-parent="#accordionFlushExample"
+                    >
+                      <div class="accordion-body">
+                        Placeholder content for this accordion, which is
+                        intended to demonstrate the
+                        <code>.accordion-flush</code> class. This is the second
+                        item's accordion body. Let's imagine this being filled
+                        with some actual content.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingThree">
+                      <button
+                        class="accordion-button collapsed"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseThree"
+                        aria-expanded="false"
+                        aria-controls="flush-collapseThree"
+                      >
+                        What if my solar panels break or malfunction?
+                      </button>
+                    </h2>
+                    <div
+                      id="flush-collapseThree"
+                      class="accordion-collapse collapse"
+                      aria-labelledby="flush-headingThree"
+                      data-bs-parent="#accordionFlushExample"
+                    >
+                      <div class="accordion-body">
+                        Placeholder content for this accordion, which is
+                        intended to demonstrate the
+                        <code>.accordion-flush</code> class. This is the third
+                        item's accordion body. Nothing more exciting happening
+                        here in terms of content, but just filling up the space
+                        to make it look, at least at first glance, a bit more
+                        representative of how this would look in a real-world
+                        application.
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <a href="">GET IN TOUCH</a>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
     <script
