--- a/Newrich/index.html
+++ b/Newrich/index.html
@@ -202,13 +202,18 @@
             class="d-flex justify-content-between flex-column flex-md-row flex-lg-row"
           >
             <div>
-              <img src="./assets/section-04-img.png" alt="" srcset="" />
+              <img
+                class="w-100"
+                src="./assets/section-04-img.png"
+                alt=""
+                srcset=""
+              />
             </div>
             <div class="section-04-content">
               <h3 class="text-danger">[some faq’S]</h3>
               <h2>A simple process.</h2>
               <div>
-                <h3>
+                <h3 class="bg-danger text-white p-2 rounded">
                   Which is better: Owning the solar power system or having a
                   power purchase agreement?
                 </h3>
@@ -318,8 +323,192 @@
           </div>
         </div>
       </section>
+      <section class="section-05"></section>
+
+      <!-- ======= Pricing Section ======= -->
+      <section id="pricing" class="pricing section-06 py-5">
+        <div class="container" data-aos="fade-up">
+          <div class="section-title text-center">
+            <h2>Pricing Plan</h2>
+            <p>
+              Join the 50,000+ business professionals who use Bomb bomb video
+              messages to rehumanize their communication.
+            </p>
+          </div>
+
+          <div class="row">
+            <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
+              <div class="box essentialBox shadow">
+                <img src="./assets/essential.png" alt="" srcset="" />
+                <h3>BombBomb Essentials</h3>
+                <p class="text-center">
+                  Quickly and easily second send and track 1 to 1 video messages
+                  from Gmail, Chrome browser or your iOS or Android device
+                </p>
+                <h4>$29/<span>mo</span></h4>
+                <a href="#" class="buy-btn">Buy Now</a>
+
+                <div class="priceBox-end d-flex flex-column align-items-center">
+                  <img class="mb-2" src="./assets/Group.png" alt="" />
+                  <p class="mb-1">5 users or more?</p>
+                  <p class="mb-0">REquest a demo for your team.</p>
+                </div>
+              </div>
+            </div>
+
+            <div
+              class="col-lg-4 mt-4 mt-lg-0"
+              data-aos="fade-up"
+              data-aos-delay="200"
+            >
+              <div class="box featured shadow">
+                <img src="./assets/plus.png" alt="" srcset="" />
+                <h3>BombBomb Plus</h3>
+                <p class="text-center">
+                  It is a long established fact that a reader will be distracted
+                  by the readable content of a page when looking at its layout.
+                </p>
+                <h4>$29/<span>mo</span></h4>
+                <a href="#" class="buy-btn">Buy Now</a>
+
+                <div class="priceBox-end d-flex flex-column align-items-center">
+                  <img class="mb-2" src="./assets/Group.png" alt="" />
+                  <p class="mb-1">5 users or more?</p>
+                  <p class="mb-0">REquest a demo for your team.</p>
+                </div>
+              </div>
+            </div>
+
+            <div
+              class="col-lg-4 mt-4 mt-lg-0"
+              data-aos="fade-up"
+              data-aos-delay="300"
+            >
+              <div class="box enterpriseBox shadow pt-4">
+                <img src="./assets/enterprise.png" alt="" srcset="" />
+                <h3>Enterprise</h3>
+                <p class="text-center">
+                  It is a long established fact that a reader will be distracted
+                  by the readable content.
+                </p>
+                <h4>$29/<span>mo</span></h4>
+                <a href="#" class="buy-btn">Get Started</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- End Pricing Section -->
     </main>
-    <footer></footer>
+    <footer class="footer-section">
+      <div class="container">
+        <div class="footer-content pt-5 pb-5">
+          <div class="row gap-5">
+            <div class="col-xl-4 col-lg-4 mb-50">
+              <div class="footer-widget">
+                <div class="footer-logo">
+                  <a href="index.html">Logo</a>
+                </div>
+                <div class="footer-text">
+                  <p>
+                    Lorem ipsum dolor sit amet, consec tetur adipisicing elit,
+                    sed do eiusmod tempor incididuntut consec tetur adipisicing
+                    elit,Lorem ipsum dolor sit amet.
+                  </p>
+                </div>
+                <div class="footer-widget">
+                  <div class="subscribe-form">
+                    <form action="#">
+                      <input
+                        class="form-control"
+                        type="text"
+                        placeholder="Email Address"
+                      />
+                      <button class="">Subscribe</button>
+                    </form>
+                  </div>
+                  <div class="footer-text mb-25">
+                    <p>
+                      Don’t miss to subscribe to our new feeds, kindly fill the
+                      form below.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="navLink-footer col-xl-7 col-lg-7 col-md-12 mb-30">
+              <div class="footer-widget d-flex justify-content-between">
+                <div>
+                  <div class="footer-widget-heading">
+                    <h3>Company</h3>
+                  </div>
+                  <ul class="list-unstyled">
+                    <li><a href="#">Explore Jobs</a></li>
+                    <li><a href="#">Feature</a></li>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Career</a></li>
+                  </ul>
+                </div>
+                <div>
+                  <div class="footer-widget-heading">
+                    <h3>Help</h3>
+                  </div>
+                  <ul class="list-unstyled">
+                    <li><a href="#">Contact Support</a></li>
+                    <li><a href="#">Product FAQ's</a></li>
+                    <li><a href="#">How to Tutorials</a></li>
+                    <li><a href="#">Account</a></li>
+                  </ul>
+                </div>
+                <div>
+                  <div class="footer-widget-heading">
+                    <h3>Company</h3>
+                  </div>
+                  <ul class="list-unstyled">
+                    <li><a href="#">Header</a></li>
+                    <li><a href="#">Hiring process</a></li>
+                    <li><a href="#">Our Feature</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <!-- <div class="col-xl-4 col-lg-4 col-md-6 mb-50"></div> -->
+          </div>
+        </div>
+      </div>
+      <div class="copyright-area">
+        <div class="container">
+          <div class="row">
+            <div class="col-xl-4 col-lg-4 text-center text-lg-left">
+              <div class="copyright-text">
+                <p class="text-white">
+                  Copyright &copy; 2018, All Right Reserved
+                  <a href="https://codepen.io/anupkumar92/">Anup</a>
+                </p>
+              </div>
+            </div>
+            <div
+              class="footer-social-icon col-xl-4 col-lg-4 d-flex justify-content-center"
+            >
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-google-plus-g"></i></a>
+            </div>
+            <div class="col-xl-4 col-lg-4 d-none d-lg-block text-right">
+              <div class="footer-menu">
+                <ul class="text-white">
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">Terms</a></li>
+                  <li><a href="#">Privacy</a></li>
+                  <li><a href="#">Policy</a></li>
+                  <li><a href="#">Contact</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
