--- a/Newrich/index.html
+++ b/Newrich/index.html
@@ -334,15 +334,17 @@
       </section>
       <section class="section-05 py-5">
         <div class="container">
-          <div class="d-flex flex-column align-items-center">
+          <div class="section-05-title d-flex flex-column align-items-center">
             <h2 class="text-white text-center d-inline-block">HOW IT WORKS</h2>
           </div>
-          <div class="d-flex justify-content-center">
+          <div
+            class="fundamental-step d-flex flex-column flex-md-row flex-lg-row justify-content-center"
+          >
             <div
-              class="phase-01 d-flex justify-content-center align-items-center gap-2"
+              class="phase-01 d-flex flex-column flex-md-row flex-lg-row justify-content-center align-items-center gap-2"
             >
               <div
-                class="steps d-flex text-white justify-content-center align-items-center"
+                class="steps d-flex flex-column flex-md-row flex-lg-row text-white justify-content-center align-items-center"
               >
                 <span class="number">01</span
                 ><span class="stepName">Fundamental</span>
@@ -351,9 +353,60 @@
                 <img src="./assets/section-05-img-01.png" alt="" />
               </div>
               <div>
-                <p class="text-white mb-0 ms-4">
+                <p class="text-white mb-0">
                   This section aims to establish a foundational understanding of
                   the core concepts and theories that govern the subject matter.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="arrow-right d-flex justify-content-center">
+            <img src="./assets/arrow-right.png" alt="" srcset="" />
+          </div>
+          <div class="phase-02-parent d-flex justify-content-center">
+            <div
+              class="phase-02 d-flex flex-column-reverse flex-md-row flex-lg-row justify-content-center align-items-center gap-1"
+            >
+              <div>
+                <p class="text-white mb-0">
+                  In this section, the processes and interactions between the
+                  various components are explored. It highlights how these
+                  elements work.
+                </p>
+              </div>
+              <div>
+                <img src="./assets/section-05-img-01.png" alt="" />
+              </div>
+              <div
+                class="steps d-flex flex-column-reverse flex-md-row flex-lg-row text-white justify-content-center align-items-center"
+              >
+                <span class="stepName">Interactions</span>
+                <span class="number">02</span>
+              </div>
+            </div>
+          </div>
+          <div class="arrow-left d-flex justify-content-center">
+            <img src="./assets/arrow-left.png" alt="" srcset="" />
+          </div>
+          <div class="d-flex justify-content-center">
+            <div
+              class="phase-01 d-flex flex-column flex-md-row flex-lg-row justify-content-center align-items-center gap-2"
+            >
+              <div
+                class="steps d-flex flex-column flex-md-row flex-lg-row text-white justify-content-center align-items-center"
+              >
+                <span class="number">03</span
+                ><span class="stepName">Conclusion</span>
+              </div>
+
+              <div>
+                <img src="./assets/section-05-img-01.png" alt="" />
+              </div>
+              <div>
+                <p class="text-white mb-0">
+                  The conclusion briefly summarizes the key points discussed in
+                  the "How It Works" section. It reinforces the main takeaways
+                  and emphasizes.
                 </p>
               </div>
             </div>
